--- a/Dockerfile.ci-runner
+++ b/Dockerfile.ci-runner
@@ -6,6 +6,7 @@ FROM debian:bookworm-slim
 
 ARG POETRY_VERSION=1.8.4
 ARG REUSE_VERSION=4.0.3
+ARG YQ_VERSION=4.44.3
 
 ARG PIPX_BIN_DIR=/usr/local/bin
 
@@ -17,7 +18,8 @@ RUN <<EOT bash
     curl \
     git \
     pipx \
-    python3
+    python3 \
+    shellcheck
   rm -rf /var/lib/apt/lists/*
 
   # reuse
@@ -25,5 +27,8 @@ RUN <<EOT bash
 
   # poetry
   pipx install poetry==${POETRY_VERSION}
+
+  # yq
+  curl -L -o /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v${YQ_VERSION}/yq_linux_amd64 && chmod +x /usr/local/bin/yq
 
 EOT
