--- a/REUSE.toml
+++ b/REUSE.toml
@@ -18,3 +18,8 @@ SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
 path = "poetry.lock"
 SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
+
+[[annotations]]
+path = "scripts/testdata/**/*.json"
+SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
+SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
