--- a/poetry.toml
+++ b/poetry.toml
@@ -2,6 +2,6 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-__pycache__
-.venv
-*.tgz
+[virtualenvs]
+create = true
+in-project = true
