--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,31 @@ package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.11,<4.0"
 
+[tool.poetry.group.dev.dependencies]
+typer = "^0.12.5"
+pytest = "^8.3.3"
+ruff = "^0.7.2"
+jinja2 = "^3.1.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
