--- a/REUSE.toml
+++ b/REUSE.toml
@@ -5,6 +5,11 @@
 version = 1
 
 [[annotations]]
+path = "charts/matrix-stack/Chart.lock"
+SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
+SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
+
+[[annotations]]
 path = "charts/matrix-stack/sub_schemas/*.json"
 SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
