--- a/charts/element-web/ci/minimal-values.yaml
+++ b/charts/element-web/ci/minimal-values.yaml
@@ -2,6 +2,8 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-.helmignore
-ci
-source/
+defaultMatrixServer:
+  baseUrl: https://synapse.ess.localhost
+
+ingress:
+  host: element.ess.localhost
