--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -44,3 +44,22 @@ jobs:
 
         git config --global --add safe.directory "$GITHUB_WORKSPACE"
         git diff --exit-code
+
+  helm-lint:
+    runs-on: cpu-s
+    container:
+      image: ghcr.io/${{ github.repository }}/ci-runner
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Set up chart-testing
+      uses: helm/chart-testing-action@v2.6.1
+
+    - name: Run chart-testing (lint)
+      run: |
+        git config --global --add safe.directory "$GITHUB_WORKSPACE"
+        ct lint --config ct.yaml
