--- a/charts/matrix-stack/ci/nothing-enabled-values.yaml
+++ b/charts/matrix-stack/ci/nothing-enabled-values.yaml
@@ -2,6 +2,5 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-.helmignore
-ci
-source/
+element-web:
+  enabled: false
