--- a/charts/element-web/values.yaml
+++ b/charts/element-web/values.yaml
@@ -31,7 +31,12 @@ image:
   ## Defaults to the Chart's appVersion if not set
   # tag:
 
+  ## Container digest to use. Used to pull the image instead of the image tag / Chart appVersion if set
+  # digest:
+
   ## Whether the image should be pulled on container startup. Valid values are Always, IfNotPresent and Never
+  ## If this isn't provided it defaults to Always when using the image tag / Chart appVersion or
+  ## IfNotPresent if using a digest
   # pullPolicy:
 
   ## A list of pull secrets to use for this image
