Synapse: initial import

--- a/REUSE.toml
+++ b/REUSE.toml
@@ -11,6 +11,11 @@ SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
 
 [[annotations]]
+path = "charts/**/source/sub_schemas/*.json"
+SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
+SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
+
+[[annotations]]
 path = "charts/**/values.schema.json"
 SPDX-FileCopyrightText = "Copyright 2024 New Vector Ltd"
 SPDX-License-Identifier = "AGPL-3.0-only OR LicenseRef-Element-Commercial"
