--- a/charts/element-web/ci/minimal-values.yaml
+++ b/charts/element-web/ci/minimal-values.yaml
@@ -2,6 +2,10 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
+global:
+  ess:
+    server_name: ess.localhost
+
 defaultMatrixServer:
   baseUrl: https://synapse.ess.localhost
 
