--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ typer = "^0.12.5"
 pytest = "^8.3.3"
 ruff = "^0.7.2"
 jinja2 = "^3.1.4"
+checkov = "^3.2.296"
+reuse = "^5.0.2"
 
 [build-system]
 requires = ["poetry-core"]
