--- a/charts/element-web/values.yaml
+++ b/charts/element-web/values.yaml
@@ -107,7 +107,7 @@ podSecurityContext:
   # fsGroupChangePolicy:
 
   ## The GID to run the entrypoint of the container process. Uses runtime default if unset.
-  # runAsGroup:
+  runAsGroup: 10004
 
   ## Indicates that the container must run as a non-root user. If true, the Kubelet will validate the image at runtime to ensure that it does not run as UID 0 (root) and fail to start the container if it does. If unset or false, no such validation will be performed.
   runAsNonRoot: true
