--- a/Dockerfile.ci-runner
+++ b/Dockerfile.ci-runner
@@ -5,6 +5,7 @@
 FROM debian:bookworm-slim
 
 ARG HELM_VERSION=3.16.2
+ARG KUBECONFORM_VERSION=0.6.7
 ARG POETRY_VERSION=1.8.4
 ARG YQ_VERSION=4.44.3
 
@@ -27,6 +28,13 @@ RUN <<EOT bash
   curl -L https://get.helm.sh/helm-v${HELM_VERSION}-linux-amd64.tar.gz | tar -xzv
   install -m u=rwx,g=rx,o=rx linux-amd64/helm /usr/local/bin/helm
   popd && rm -rf helm
+
+  # Kubeconform
+  mkdir kubeconform && pushd kubeconform
+  curl -L https://github.com/yannh/kubeconform/releases/download/v${KUBECONFORM_VERSION}/kubeconform-linux-amd64.tar.gz | tar -xzv
+  install -m u=rwx,g=rx,o=rx kubeconform /usr/local/bin/kubeconform
+  popd && rm -rf kubeconform
+  kubeconform -v
 
   # poetry
   pipx install poetry==${POETRY_VERSION}
