Charts: improve .helmignore

--- a/charts/matrix-stack/.helmignore
+++ b/charts/matrix-stack/.helmignore
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 .helmignore
-ci
+matrix-stack-*.tgz
+ci/
 source/
 sub_schemas/
