Default the postgres-libpq values to sslMode=prefer rather than require

--- a/charts/synapse/values.yaml
+++ b/charts/synapse/values.yaml
@@ -20,7 +20,7 @@ postgres:
   # database:
 
   ## TLS settins to use for the PostgreSQL connection
-  sslMode: require
+  sslMode: prefer
 
   ## PostgreSQL password.
   ## It can either be provided inline in the Helm chart e.g.:
