Synapse: correct formatting of Helm user-provided config file

--- a/charts/synapse/templates/synapse_secret.yaml
+++ b/charts/synapse/templates/synapse_secret.yaml
@@ -10,8 +10,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 data:
 {{- with .Values.additional.config }}
-  02-homeserver-helm-user-provided.yaml: |
-    {{- . | toYaml | b64enc | nindent 4 }}
+  02-homeserver-helm-user-provided.yaml: {{ . | b64enc }}
 {{- end }}
 {{- with .Values.macaroon.value }}
   MACAROON: {{ . | b64enc }}
