--- a/charts/element-web/templates/deployment.yaml
+++ b/charts/element-web/templates/deployment.yaml
@@ -36,14 +36,16 @@ spec:
 {{- if gt (.Values.replicas | int) 1 }}
       affinity:
         podAntiAffinity:
-          requiredDuringSchedulingIgnoredDuringExecution:
-          - labelSelector:
-              matchExpressions:
-              - key: app.kubernetes.io/instance
-                operator: In
-                values:
-                - "{{ .Release.Name }}-element-web"
-            topologyKey: kubernetes.io/hostname
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app.kubernetes.io/instance
+                  operator: In
+                  values:
+                  - "{{ .Release.Name }}-element-web"
+              topologyKey: kubernetes.io/hostname
 {{- end }}
       automountServiceAccountToken: false
 {{- with .Values.image.pullSecrets }}
