--- a/charts/synapse/ci/worker-example-values.yaml
+++ b/charts/synapse/ci/worker-example-values.yaml
@@ -25,23 +25,41 @@ postgres:
     secretKey: password
 
 workers:
-  appservice: {}
-  background: {}
-  client-reader: {}
-  encryption: {}
-  event-creator: {}
+  appservice:
+    enabled: true
+  background:
+    enabled: true
+  client-reader:
+    enabled: true
+  encryption:
+    enabled: true
+  event-creator:
+    enabled: true
   event-persister:
+    enabled: true
     instances: 2
-  federation-reader: {}
-  federation-sender: {}
-  initial-synchrotron: {}
-  media-repository: {}
-  presence-writer: {}
+  federation-reader:
+    enabled: true
+  federation-sender:
+    enabled: true
+  initial-synchrotron:
+    enabled: true
+  media-repository:
+    enabled: true
+  presence-writer:
+    enabled: true
   pusher:
+    enabled: true
     instances: 2
-  receipts-account: {}
-  sliding-sync: {}
-  sso-login: {}
-  synchrotron: {}
-  typing-persister: {}
-  user-dir: {}
+  receipts-account:
+    enabled: true
+  sliding-sync:
+    enabled: true
+  sso-login:
+    enabled: true
+  synchrotron:
+    enabled: true
+  typing-persister:
+    enabled: true
+  user-dir:
+    enabled: true
