--- a/charts/synapse/templates/haproxy_configmap.yaml
+++ b/charts/synapse/templates/haproxy_configmap.yaml
@@ -15,9 +15,9 @@ data:
     # A map file that is used in haproxy config to map from matrix paths to the
     # named backend. The format is: path_regexp backend_name
 
-    {{ $enabledWorkers := keys .Values.workers }}
-    {{- range $workerType := $enabledWorkers | sortAlpha }}
-    {{- $workersPaths := (include "element-io.synapse.process.workerPaths" (dict "workerType" $workerType "enabledWorkers" $enabledWorkers)) | fromJsonArray }}
+    {{ $enabledWorkerTypes := keys ((include "element-io.synapse.enabledWorkers" $) | fromJson) }}
+    {{- range $workerType := $enabledWorkerTypes | sortAlpha }}
+    {{- $workersPaths := (include "element-io.synapse.process.workerPaths" (dict "workerType" $workerType "enabledWorkerTypes" $enabledWorkerTypes)) | fromJsonArray }}
     {{- if len $workersPaths }}
     # {{ $workerType }}
     {{- range $path := $workersPaths }}
@@ -28,7 +28,7 @@ data:
   path_map_file_get: |
     # A map file that is used in haproxy config to map from matrix paths to the
     # named backend. The format is: path_regexp backend_name
-    {{ if hasKey .Values.workers "client-reader" }}
+    {{ if dig "client-reader" "enabled" false .Values.workers }}
     ^/_matrix/client/(api/v1|r0|v3|unstable)/pushrules/ client-reader
     {{- end }}
   429.http: |
