--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ cryptography = "^43.0.3"
 platformdirs = "^4.3.6"
 python-on-whales = "^0.73.0"
 aiohttp = "^3.11.6"
+yamale = "^5.2.1"
 
 [tool.poetry.group.dev.dependencies]
 typer = "^0.12.5"
