--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -18,7 +18,7 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     strategy:
       matrix:
-        test-component: ["ELEMENT_WEB"]
+        test-component: ["element-web"]
 
     steps:
       - uses: actions/checkout@v3
@@ -29,5 +29,5 @@ jobs:
           poetry install
       - name: Test with pytest
         run: |
-          export TEST_COMPONENT=${{ matrix.test-component }}
+          . tests/env/${{ matrix.test-component }}.rc
           poetry run pytest tests
