--- a/Dockerfile.ci-runner
+++ b/Dockerfile.ci-runner
@@ -20,6 +20,18 @@ RUN <<EOT bash
     git \
     pipx \
     shellcheck
+
+  install -m 0755 -d /etc/apt/keyrings
+  curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc
+  chmod a+r /etc/apt/keyrings/docker.asc
+
+  echo \
+    "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian \
+    $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
+    tee /etc/apt/sources.list.d/docker.list > /dev/null
+  apt-get -y update
+  apt-get -y --no-install-recommends install docker-ce docker-ce-cli
+
   rm -rf /var/lib/apt/lists/*
   python3 --version
   shellcheck --version
