--- a/charts/synapse/values.yaml
+++ b/charts/synapse/values.yaml
@@ -5,6 +5,22 @@
 # This file is generated. Do not edit directly. Edit source/values.yaml.j2 instead to make changes
 
 
+## Global values available to all sub-charts
+global:
+  ## ESS specific globals, namespaced to avoid interference with other charts
+  ess:
+    ## The server name of the Matrix Stack. This gets embedded in user IDs & room IDs
+    ## It can not change after the initial deployment.
+    # server_name: ess.localhost
+
+    ## A list of Secrets in this namespace to use as pull Secrets.
+    ## Ignored if a given component specifies its own pull Secrets.
+    ## e.g.
+    ## imagePullSecrets:
+    ## - name: ess-pull-secret
+    imagePullSecrets: []
+
+
 ## Details of the Postgres Database to use
 postgres:
   ## PostgreSQL database host
