--- a/charts/element-web/templates/deployment.yaml
+++ b/charts/element-web/templates/deployment.yaml
@@ -48,7 +48,7 @@ spec:
               topologyKey: kubernetes.io/hostname
 {{- end }}
       automountServiceAccountToken: false
-{{- include "element-io.ess-library.pods.pullSecrets" .Values.image | indent 6 }}
+{{- include "element-io.ess-library.pods.pullSecrets" (list $ .Values.image) | indent 6 }}
 {{- with .Values.podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
