--- a/charts/matrix-stack/values.yaml
+++ b/charts/matrix-stack/values.yaml
@@ -7,10 +7,17 @@
 ## Global values available to all sub-charts
 global:
   ## ESS specific globals, namespaced to avoid interference with other charts
-  ess: {}
+  ess:
     ## The server name of the Matrix Stack. This gets embedded in user IDs & room IDs
     ## It can not change after the initial deployment.
     # server_name: ess.localhost
+
+    ## A list of Secrets in this namespace to use as pull Secrets.
+    ## Ignored if a given component specifies its own pull Secrets.
+    ## e.g.
+    ## imagePullSecrets:
+    ## - name: ess-pull-secret
+    imagePullSecrets: []
 
 element-web:
   enabled: true
