--- a/charts/synapse/templates/redis_deployment.yaml
+++ b/charts/synapse/templates/redis_deployment.yaml
@@ -36,7 +36,7 @@ spec:
 {{- end }}
     spec:
       automountServiceAccountToken: false
-{{- include "element-io.ess-library.pods.pullSecrets" .image | nindent 6 }}
+{{- include "element-io.ess-library.pods.pullSecrets" (list $ .image) | nindent 6 }}
 {{- with .podSecurityContext }}
       securityContext:
         {{- toYaml . | nindent 8 }}
