--- a/Dockerfile.ci-runner
+++ b/Dockerfile.ci-runner
@@ -5,7 +5,9 @@
 FROM python:3.12-slim-bookworm
 
 ARG HELM_VERSION=3.16.2
+ENV KIND_VERSION=v0.25.0
 ARG KUBECONFORM_VERSION=0.6.7
+ENV KUBECTL_VERSION=v1.31.0
 ARG POETRY_VERSION=1.8.4
 ARG YQ_VERSION=4.44.3
 
@@ -25,6 +27,7 @@ RUN <<EOT bash
   curl -fsSL https://download.docker.com/linux/debian/gpg -o /etc/apt/keyrings/docker.asc
   chmod a+r /etc/apt/keyrings/docker.asc
 
+  # docker
   echo \
     "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.asc] https://download.docker.com/linux/debian \
     $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
@@ -35,6 +38,7 @@ RUN <<EOT bash
   rm -rf /var/lib/apt/lists/*
   python3 --version
   shellcheck --version
+  docker --version
 
   # Helm
   mkdir helm && pushd helm
@@ -49,6 +53,20 @@ RUN <<EOT bash
   install -m u=rwx,g=rx,o=rx kubeconform /usr/local/bin/kubeconform
   popd && rm -rf kubeconform
   kubeconform -v
+
+  # Kind
+  curl -L -o kind-linux-amd64 https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-linux-amd64
+  curl -L -o kind-linux-amd64.sha256sum https://github.com/kubernetes-sigs/kind/releases/download/${KIND_VERSION}/kind-linux-amd64.sha256sum
+  sha256sum -c --status kind-linux-amd64.sha256sum
+  rm kind-linux-amd64.sha256sum
+  mv kind-linux-amd64 /usr/local/bin/kind
+  chmod +x /usr/local/bin/kind
+  kind --version
+
+  # kubectl
+  curl -L -o /usr/local/bin/kubectl https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/amd64/kubectl
+  chmod +x /usr/local/bin/kubectl
+  kubectl version --client
 
   # poetry
   pipx install poetry==${POETRY_VERSION}
