--- a/charts/synapse/ci/checkov-with-workers-values.yaml
+++ b/charts/synapse/ci/checkov-with-workers-values.yaml
@@ -27,6 +27,7 @@ postgres:
 annotations:
   checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
   checkov.io/skip2: CKV_K8S_43=No digests
+  checkov.io/skip3: CKV2_K8S_6=No network policy yet
 
 workers:
   appservice:
@@ -40,8 +41,10 @@ haproxy:
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
+    checkov.io/skip3: CKV2_K8S_6=No network policy yet
 
 redis:
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
+    checkov.io/skip3: CKV2_K8S_6=No network policy yet
