--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -49,7 +49,7 @@ jobs:
 
         # Rebuild the charts with from the current source
         version=$(yq '.version' charts/matrix-stack/Chart.yaml)
-        scripts/construct_helm_charts.sh charts/
+        scripts/construct_helm_charts.sh
         scripts/set_chart_version.sh "$version"
 
         git diff --exit-code
