poetry: add aiohttp_retry to handle synapse 429s

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.12,<4.0"
+aiohttp-retry = "^2.9.1"
 
 [tool.poetry.group.dev.dependencies]
 pyhelm3 = "^0.4.0"
