Charts: allow setting of labels globally or for a given component

--- a/charts/element-web/values.yaml
+++ b/charts/element-web/values.yaml
@@ -12,6 +12,9 @@ global:
     ## It can not change after the initial deployment.
     # server_name: ess.localhost
 
+    ## Labels to add to all manifest in this chart and all sub-charts
+    labels: {}
+
     ## A list of Secrets in this namespace to use as pull Secrets.
     ## Ignored if a given component specifies its own pull Secrets.
     ## e.g.
@@ -74,6 +77,12 @@ ingress:
   ## How the service behind the ingress is constructed
   service:
     type: ClusterIP
+
+## Labels to add to all manifest in this chart
+labels: {}
+
+## Defines the annotations to add to the workload
+# annotations: {}
 
 ## A subset of SecurityContext. ContainersSecurityContext holds pod-level security attributes and common container settings
 containersSecurityContext:
@@ -181,6 +190,3 @@ resources:
 ##   value:
 
 tolerations: []
-
-## Defines the annotations to add to the workload
-# annotations: {}
