--- a/charts/synapse/values.yaml
+++ b/charts/synapse/values.yaml
@@ -473,6 +473,17 @@ resources:
   limits:
     memory: 4Gi
 
+## Controls configuration of the ServiceAccount for this component
+serviceAccount:
+  ## Whether a ServiceAccount should be created by the chart or not
+  create: true
+
+  ## What name to give the ServiceAccount. If not provided the chart will provide the name automatically
+  name: ""
+
+  ## Annotations to add to the service account
+  annotations: {}
+
 ## Whether to deploy ServiceMonitors into the cluster for this component
 ## Requires the ServiceMonitor CRDs to be in the cluster
 serviceMonitors:
@@ -621,6 +632,17 @@ haproxy:
     limits:
       memory: 200Mi
 
+  ## Controls configuration of the ServiceAccount for this component
+  serviceAccount:
+    ## Whether a ServiceAccount should be created by the chart or not
+    create: true
+
+    ## What name to give the ServiceAccount. If not provided the chart will provide the name automatically
+    name: ""
+
+    ## Annotations to add to the service account
+    annotations: {}
+
   ## Whether to deploy ServiceMonitors into the cluster for this component
   ## Requires the ServiceMonitor CRDs to be in the cluster
   serviceMonitors:
@@ -766,6 +788,17 @@ redis:
     ## Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/
     limits:
       memory: 50Mi
+
+  ## Controls configuration of the ServiceAccount for this component
+  serviceAccount:
+    ## Whether a ServiceAccount should be created by the chart or not
+    create: true
+
+    ## What name to give the ServiceAccount. If not provided the chart will provide the name automatically
+    name: ""
+
+    ## Annotations to add to the service account
+    annotations: {}
 
   ## Workload tolerations
   ## The pod this Toleration is attached to tolerates any taint that matches the triple <key,value,effect> using the matching operator <operator>.
