--- a/tests/env/element-web.rc
+++ b/tests/env/element-web.rc
@@ -3,3 +3,4 @@
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 export TEST_ELEMENT_WEB=1
+export TEST_VALUES_FILE=charts/matrix-stack/ci/pytest-element-web-values.yaml
